k8s/taskapi/task-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: task-api
    labels:
        app: task-api
    namespace: hopper
spec:
    replicas: 1
    selector:
        matchLabels:
            app: task-api
    template:
        metadata:
            labels:
                app: task-api
        spec:
            containers:
                - name: task-api-service
                  image: bootcamp-starter-kit_tasks-api:latest
                  imagePullPolicy: Never
                  ports:
                     - containerPort: 8000
